<resources>
    <string name="app_name">BMIAPP</string>
    <string name="login_email">EMAIL</string>
    <string name="login_password">PASSWORD</string>
    <string name="app_logo">App Logo</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="unable_to_display_background">unable to display background</string>
    <string name="register_using">Register using</string>
    <string name="age">What is your\n age?</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="set_go">Set Go</string>
    <string name="google_status_fmt">Signed in as %s</string>
    <string name="firebase_status_fmt">Google User: %s</string>
    <string name="loading">Loading…</string>
    <string name="title_text">Google Sign-In\nQuickstart</string>
    <string name="signed_in_fmt">Signed in as %s</string>
    <string name="disconnect">Disconnect</string>
    <string name="desc_google_icon">Google Logo</string>
    <string name="title_activity_home_page">HomePage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title">Body Mass Index</string>


</resources>
