<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yoga"
    android:orientation="vertical"
    android:clickable="true"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_background_black"
        android:orientation="vertical">

        <com.makeramen.roundedimageview.RoundedImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/google_icon"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/google_logo"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/desc_firebase_lockup"
            app:riv_corner_radius="5dip"
            app:riv_mutate_background="true"
            app:riv_oval="true"
            />


        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_bottom_margin"
            android:text="@string/google_title_text"
            android:theme="@style/ThemeOverlay.MyTitleText" />

        <TextView
            android:id="@+id/status"
            style="@style/ThemeOverlay.MyTextDetail"
            android:text="@string/signed_out" />

        <TextView
            android:id="@+id/detail"
            style="@style/ThemeOverlay.MyTextDetail"
            tools:text="Google User: User Name" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_background_black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:paddingTop="10dp"
       >

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            tools:visibility="visible">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_out"
                android:contentDescription="@string/unable_to_display_background"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

            <Button
                android:id="@+id/land_in_app_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/set_go"
                android:contentDescription="@string/unable_to_display_background"
                android:theme="@style/ThemeOverlay.MyDarkButtonSetGo" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>