<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/yoga"
    android:id="@+id/fragment_container_SignupPage"
    tools:context="com.enhabyto.bmiapp.SignupPage">





    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_background_white"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"


            >

        <ImageView
            android:id="@+id/imageViewAppLogoSignup"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_logo"
            android:background="@drawable/apple"
            android:layout_marginTop="20dp"
            />





        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingBottom="10dp"
            >

            <EditText
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="25dp"
                android:fontFamily="serif"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="serif"
                android:hint="@string/login_password"
                android:textSize="15sp"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_background_green"
            android:text="@string/btn_register"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            />




    </LinearLayout>

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@mipmap/signin"
        android:layout_marginTop="145dp"
        android:layout_marginStart="20dp"
        android:id="@+id/iv1"
        android:contentDescription="@string/unable_to_display_background"
        />

    <ImageView
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:src="@mipmap/password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="210dp"
        android:contentDescription="@string/unable_to_display_background"
        />





</RelativeLayout>
