<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/yoga"
    android:id="@+id/fragment_container_LoginSIgnupStartPage"
    tools:context="com.enhabyto.bmiapp.LoginSignupStartPage">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_background_white"
        android:contentDescription="@string/unable_to_display_background"
        >



            <ImageView
                android:id="@+id/imageViewAppLogo"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:contentDescription="@string/app_logo"
                android:background="@drawable/apple"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="10dp"
                />





            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imageViewAppLogo"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="20dp"
                android:id="@+id/textinput1"
                >

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:hint="@string/login_email"
                    android:layout_weight="1"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:fontFamily="serif"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textinput2"
                android:layout_below="@id/textinput1"
                >

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:fontFamily="serif"
                    android:hint="@string/login_password"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:maxLines="1"
                    />
            </android.support.design.widget.TextInputLayout>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@mipmap/signin"
            android:layout_marginStart="10dp"
            android:layout_alignTop="@id/textinput1"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/unable_to_display_background"
            android:id="@+id/mail_icon"
            />



        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignTop="@id/textinput2"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/password"
            android:id="@+id/password_icon"
            android:contentDescription="@string/unable_to_display_background"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll6"
            android:layout_below="@id/textinput2"
            android:layout_marginTop="15dp"
            android:weightSum="2"
            >

            <Button
                android:id="@+id/forgot_password"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_marginTop="15dp"
                android:text="Forgot password"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:textStyle="bold"
                android:background="@drawable/rounded_background_amber"
                android:contentDescription="@string/unable_to_display_background"
                android:layout_marginBottom="5dp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/rounded_background_green"
                android:text="@string/btn_login"
                android:layout_weight="1"
                android:textColor="@android:color/black"
                android:textStyle="bold" />





        </LinearLayout>









            <com.makeramen.roundedimageview.RoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="20dp"
                android:id="@+id/sign_in_with_google"
                android:src="@drawable/signingoogle"
                app:riv_corner_radius="5dp"
                android:scaleType="fitCenter"
                android:layout_below="@id/ll6"
                android:contentDescription="@string/unable_to_display_background"
                />


            <com.makeramen.roundedimageview.RoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignEnd="@id/sign_in_with_google"
                android:id="@+id/sign_in_with_fb"
                android:src="@drawable/fb_login"
                android:layout_below="@id/sign_in_with_google"
                android:scaleType="fitCenter"
                app:riv_corner_radius="5dp"
                android:contentDescription="@string/unable_to_display_background"
                android:layout_alignStart="@+id/sign_in_with_google" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:layout_below="@id/sign_in_with_fb"
            android:layout_centerInParent="true"
            android:id="@+id/or"
            android:layout_marginTop="5dp"
            android:textSize="25sp"
            />


        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/sign_up"
            android:src="@drawable/signupwithmail"
            android:layout_below="@id/or"
            android:scaleType="fitCenter"
            app:riv_corner_radius="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/unable_to_display_background"
            android:layout_alignStart="@+id/sign_in_with_google"

          />





        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/login_progressbar"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
           android:layout_below="@id/sign_in_with_google"
            />


    </RelativeLayout>

</RelativeLayout>

